<resources>
    <string name="app_name">Справочник по ОТ и ТБ</string>
    <string name="add_theory">Добавить теорию</string>
    <string name="theory">Теория</string>
    <string name="tests">Тесты</string>
    <string name="check_list">Чек-листы</string>
    <string name="add_tests">Добавить тест</string>
    <string name="add_check_list">Добавить чек-лист</string>
    <string name="title">Название</string>
    <string name="text">Текст</string>
    <string name="save">Сохранить</string>
    <string name="save_text">Сохранено</string>
    <string name="empty">Пустое поле</string>
    <string name="read">Перейти, посмотреть</string>
    <string name="next">Далее</string>
    <string name="sing_up">Зарегистрироваться</string>
    <string name="sing_up_user">Зарегистрировать</string>
    <string name="sing_in">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="add_par">Добавить пункт</string>
    <string name="add_name_check_list">Введите название чек-листа</string>
    <string name="par">Пункт</string>
    <string name="back_to_home">Вернуться в главное меню</string>
    <string name="result_tests">Результаты тестов</string>
    <string name="result_check_list">Результаты чек-листов</string>
    <string name="add_new_user">Добавить нового пользователя</string>

    <!--    Текст в результате теста-->
    <string name="test_congratulation">Поздравляем!\n Вы успешно прошли данный тест!</string>
    <string name="test_not_congratulation">К сожалению, вы не прошли данный тест!\n Попробуйте снова позже.</string>

    <!--    Текст в добавлении теста-->
    <string name="enter_name_test">Введите название теста</string>
    <string name="enter_question">Введите вопрос</string>
    <string name="enter_answer1">Вариант 1</string>
    <string name="enter_answer2">Вариант 2</string>
    <string name="enter_answer3">Вариант 3</string>
    <string name="enter_answer4">Вариант 4</string>

    <string name="empty_text">Пожалуйста, заполните все поля</string>
    <string name="adding">Добавлено</string>
    <string name="saving">Ваш тест сохранён!</string>
    <string name="empty_data">Нет данных для сохранения</string>
    <string name="various_password">Разные пароли!</string>
    <string name="sing_out">Выйти из аккаунта</string>
    <string name="you_result">Ваш результат:</string>
    <string name="verification_email">Спасибо за регистрацию, для получения прав администратора подтвердите вашу почту.</string>
    <string name="error">Ошибка</string>
    <string name="generate_password">Сгенерировать пароль</string>
    <string name="settings">Настройки</string>
    <string name="search_view">Search View</string>
    <string name="about_application">О приложении</string>
    <string name="users">Пользователи</string>

    <!--    Название экранов (title)-->
    <string name="main_title">Главный экран</string>
    <string name="theory_title">Теория</string>
    <string name="add_theory_title">Создание теории</string>
    <string name="test_title">Тест</string>
    <string name="add_test_title">Создание теста</string>
    <string name="reg_title">Регистрация</string>
    <string name="login_title">Авторизация</string>
    <string name="add_check_list_title">Создание чек-листа</string>
    <string name="result_test_title">Результат теста</string>
    <string name="check_list_title">Чек-лист</string>
    <string name="result_check_lists_title">Результаты чек-листов</string>
    <string name="result_tests_title">Результаты тестов</string>
    <string name="add_new_user_title">Добавление нового пользователя</string>
    <string name="users_title">Пользователи</string>
    <string name="settings_title">Настройки</string>
    <string name="about_application_title">О приложении</string>

    <!--   AlertDialog с подсказкой-->
    <string name="support">Support</string>
    <string name="support_title">Подсказка</string>
    <string name="support_message">"Для удобной загрузки теории, откройте на телефоне нужный документ с техникой безопасности в любом удобном для вас редакторе."
                            "\nДалее зажмите пальцем любое слово и выберите \"Выделить все\", "
                            "после нажмите на \"Копировать\".\nВставьте всё в поле \"Текст\" в данном приложении."
                            +"\n\nЛибо можете загрузить PDF файл с вашего телефона."</string>
    <string name="change_password">Сменить пароль</string>
    <string name="your_password">Введите ваш пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="confirm_btn_password">Подтвердить изменения</string>
    <string name="text_for_forget_password">Для сброса пароля, укажите ваш email адрес.\nНа него вам придет письмо с ссылкой для смены пароля.</string>
    <string name="btn_send">Отправить</string>
    <string name="change_password_title">Смена пароля</string>
    <string name="forget_password_title">Восстановление пароля</string>
    <string name="no_data">Данных нет</string>
    <string name="change_password_text">Вы можете сменить свой пароль на другой</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="delete_account_text">Вы можете польностью удалить свой аккаунт</string>

    <string name="file_name">Введите название файла</string>
    <string name="upload_file">Выбрать и загрузить файл</string>

<!--    About Activity-->
    <string name="about_text">Данное приложение предназначается для облегчения решения задач по проверки и изучению охраны труда и техники безопасности на предприятии.</string>
    <string name="developer">Разработчик: Борзикова Алина\nСвязь с разработчиком: handbook.otandtb@gmail.com</string>
    <string name="contact_with_me">Связь с разработчиком: handbook.otandtb@gmail.com</string>
    <string name="privacy_policy_link">При регистрации вы соглашаетесь с политикой конфиденциальности приложения.</string>


</resources>
