<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btTheory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:onClick="onClickTheoryList"
        android:layout_margin="8dp"
        android:text="@string/theory"/>
    <Button
        android:id="@+id/btTests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:onClick="onClickTestsList"
        android:layout_margin="8dp"
        android:text="@string/tests"/>
    <Button
        android:id="@+id/btCheckList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:onClick="onClickCheckList"
        android:layout_margin="8dp"
        android:text="@string/check_list"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAddTheory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAddTheory"
            android:layout_weight="1"
            android:text="@string/add_theory"/>
        <Button
            android:id="@+id/btAddTests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAddTest"
            android:text="@string/add_tests"/>
        <Button
            android:id="@+id/btAddCheckList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAddCheckList"
            android:text="@string/add_check_list"/>
    </LinearLayout>
    <Button
        android:id="@+id/btResultTests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/result_tests"
        android:onClick="onClickResultTests"
        android:layout_margin="4dp"/>
    <Button
        android:id="@+id/btResultCheckList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/result_check_list"
        android:onClick="onClickResultCheckList"
        android:layout_margin="4dp"/>
    <Button
        android:id="@+id/btSingOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClickSingOut"
        android:layout_gravity="center"
        android:text="@string/sing_out"/>

</LinearLayout>
</ScrollView>