<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>
        <EditText
            android:id="@+id/etText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text"/>
        <Button
            android:id="@+id/btSaveTheoty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:onClick="onClickSaveTheory"
            android:text="@string/save"/>
        <Button
            android:id="@+id/btReadTheoty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:onClick="onClickReadTheory"
            android:layout_marginTop="8dp"
            android:text="@string/read"/>

    </LinearLayout>
</ScrollView>