<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:orientation="vertical"
    android:background="@color/colorWrite">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/text_for_forget_password"
        android:textSize="@dimen/text_size_btn"
        android:textColor="@color/colorBlack"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/etEmailSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:background="@drawable/custom_input"/>

    <Button
        android:id="@+id/btSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:text="@string/btn_send"
        android:background="@drawable/rounded"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_btn"
        android:textColor="#FFFFFF"
        android:onClick="onClickSendConfirmPassword"/>

</LinearLayout>