<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/etEnterNameTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name_test"
            android:layout_margin="8dp"
            android:inputType="textPersonName|textCapSentences" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1.5dp"
            android:layout_marginBottom="32dp"
            android:background="#171717"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>

        <EditText
            android:id="@+id/etEnterQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_question"
            android:layout_margin="8dp"
            android:inputType="textPersonName|textCapSentences"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#202020"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>

        <EditText
            android:id="@+id/etOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_answer1"
            android:layout_margin="8dp"
            android:inputType="textPersonName|textCapSentences"/>

        <EditText
            android:id="@+id/etOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_answer2"
            android:layout_margin="8dp"
            android:inputType="textPersonName|textCapSentences"/>

        <EditText
            android:id="@+id/etOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_answer3"
            android:layout_margin="8dp"
            android:inputType="textPersonName|textCapSentences"/>

        <EditText
            android:id="@+id/etOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_answer4"
            android:layout_margin="8dp"
            android:inputType="textPersonName|textCapSentences"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Выберите правильный ответ:"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_tv_answer"/>
        <RadioGroup
            android:id="@+id/rgAnswerOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyRadioButton"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbAnswerOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textSize="@dimen/size_tv_answer"/>
            <RadioButton
                android:id="@+id/rbAnswerOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:textSize="@dimen/size_tv_answer"/>
            <RadioButton
                android:id="@+id/rbAnswerOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"
                android:textSize="@dimen/size_tv_answer"/>
            <RadioButton
                android:id="@+id/rbAnswerOption4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"
                android:textSize="@dimen/size_tv_answer"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btAddQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Добавить вопрос"
                android:onClick="onClickAddQuestion"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btSaveTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Сохранить тест"
                android:onClick="onClickSaveTest"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/btLookTests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/read"
            android:onClick="onClickLookTests"/>
    </LinearLayout>
</ScrollView>