<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWrite">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    tools:context=".user_email.AddNewUserActivity">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="12dp"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"/>

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="@+id/etName"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            android:padding="12dp"
            android:drawableStart="@drawable/custom_account_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/etSurname"
            app:layout_constraintStart_toStartOf="@+id/etSurname"
            app:layout_constraintTop_toBottomOf="@+id/etSurname"
            android:padding="12dp"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <ImageButton
            android:id="@+id/btGeneratePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:background="@drawable/custom_button"
            android:padding="6dp"
            android:onClick="onClickGeneratePassword"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword"
            app:srcCompat="@drawable/ic_random"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tvGeneratePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/generate_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btSingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sing_up_user"
            android:onClick="onClickSaveSingUp"
            android:padding="12dp"
            android:background="@drawable/rounded"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_btn"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvGeneratePassword" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>