<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity"
    android:background="@color/colorWrite">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etYourPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:fontFamily="@font/nunito"
            android:inputType="textPassword"
            android:maxLength="15"
            android:ems="10"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/darker_gray"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:fontFamily="@font/nunito"
            android:inputType="textPassword"
            android:maxLength="15"
            android:ems="10"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/nunito"
            android:inputType="textPassword"
            android:maxLength="15"
            android:ems="10"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:text="@string/confirm_btn_password"
        android:background="@drawable/rounded"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_btn"
        android:textColor="#FFFFFF"
        android:onClick="onClickConfirmPassword"/>

</LinearLayout>