<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity"
    android:background="@color/colorWrite">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields"
        android:padding="12dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:background="@drawable/custom_input"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:ems="10"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            android:padding="12dp"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:visibility="gone"-->
<!--        android:id="@+id/etPassword"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:maxLength="30"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/etEmail"-->
<!--        app:layout_constraintStart_toStartOf="@+id/etEmail"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etEmail"-->
<!--        tools:ignore="TextFields"-->
<!--        android:padding="12dp"-->
<!--        android:drawableStart="@drawable/custom_lock_icon"-->
<!--        android:drawablePadding="12dp"-->
<!--        android:background="@drawable/custom_input"/>-->

    <Button
        android:id="@+id/btSingUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sing_up"
        android:onClick="onClickSingUp"
        android:background="@drawable/rounded"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btSingIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sing_in"
        android:onClick="onClickSingIn"
        android:background="@drawable/rounded"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btSingUp"
        app:layout_constraintStart_toStartOf="@+id/btSingUp"
        app:layout_constraintTop_toBottomOf="@+id/btSingUp" />
</androidx.constraintlayout.widget.ConstraintLayout>